Full-menu alignment issues

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
+
 $bg-colour: #fff;
 $navbar-font-colour: #fff;
 $maroon-colour: #DA4167;
+$category-title-font-color: rgba(0, 0, 0, 0.61);
