--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
 @use 'variables' as v;
 
-* {
+body {
   font-family: 'Inter', sans-serif;
 }
 
